--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 </head>
 
 <body>
+      <nav>
+        <h1>Fun Bus</h1>
 
+        <a href = "">Home</a>
+        <a href = "">About Us</a>
+        <a href = "">Blog</a>
+        <a href = "">Contact</a>
+      </nav>
+
+      <img src ="img/fun-bus.jpg" alt ="Fun Bus">
   
      
   <div class="container home">
